# idSLAM

./: CMakeLists.txt  README.md  manifest.xml  nodelet_idslam.xml  readme.txt  todo.txt
data/: cam1cam2.txt  cam1cam2.txt~  (+42 more)
src/: BaseSLAMNode.cpp  BaseSLAMNode.h  CMakeLists.txt  Cameras_calib.cpp  DualMonoSLAMnode.cpp  DualMonoSLAMnodelet.cpp  Makefile  MapVisualization.cpp  MapVisualization.h  MonoLandingNode.cpp  MonoPTAMNode.cpp  RGBDPTAMNode.cpp  RGBDPTAMOffline.cpp  SimplePTAMNode.cpp  StereoPTAMNode.cpp  cmake_install.cmake  dcslamnode.cpp  idslamnodelet.cpp  idslamnodelet.cpp.UK2321  kinect_calib.cpp
src/ODT/: MyOrb.cpp  MyOrb.h  conversions_img.cpp  conversions_img.h  convex.cpp  convex_opt.cpp  cvdopencv_helper.cpp  cvdopencv_helper.h  homographysolver.cpp  homographysolver.h  landing_object.cpp  landing_object.h  mymatcher.cpp  mymatcher.h  padtracker.cpp  padtracker.h  polygon.cpp  polygon.h  ptinpoly.cpp  ptinpoly.h
src/backend/: CMakeLists.txt  CMakeLists1.txt  Makefile  README.md  backend.cpp  backend.h  cmake_install.cmake
src/backend/cmake/: FindDBoW2.cmake  FindG2O.cmake
src/backend/cs_geometry/: CMakeLists.txt  Camera.cpp  Camera.h  Conversions.h  FivePointSolver.cpp  Makefile  PointClouds.h  TrivariatePolynomials.h  cmake_install.cmake
src/backend/cslam/: CMakeLists.txt  backend.cpp  backend.h  cmake_install.cmake  cslam.cbp
src/backend/cslam (copy)/: Makefile  backend.cbp  backend.cpp  backend.h  cmake_install.cmake
src/backend/cslam (copy)/cs_geometry/: Conversions.hpp  FivePointSolver.h  Makefile
src/backend/cslam (copy)/g2o_types/: Makefile  anchored_points.h  cmake_install.cmake
src/backend/cslam (copy)/info/: kinect_default.yaml
src/backend/cslam (copy)/loops/: DLoopDetector.h  Makefile  cmake_install.cmake
src/backend/cslam (copy)/matching/: BruteForceMatcher.cpp  BruteForceMatcher.h  Makefile  cmake_install.cmake
src/backend/cslam (copy)/nodes/: CMakeLists.txt  CSLAMNode.cpp  CSLAMNode.h  ba_alone.cpp  cslam_node.cpp  cslam_offline.cpp  evaluate_registration.cpp  kf2pcd.cpp  voc_gen.cpp
src/backend/cslam (copy)/registration/: Registrator3P.h  RegistratorBAPTAM.cpp  RegistratorKFs.cpp  RegistratorSIM3.cpp  RegistratorSIM3.h
src/backend/cslam (copy)/slam/: Makefile  PGOptimizer.h  SLAMSystem.cpp  SLAMSystem.h  cmake_install.cmake
src/backend/cslam (copy)/tools/: Profiler.cpp
src/backend/cslam/cs_geometry/: CMakeLists.txt  Conversions.cpp  Conversions.h  Makefile  Math.cpp  Math.h  PointClouds.cpp  TrivariatePolynomials.cpp  cmake_install.cmake
src/backend/cslam/g2o_types/: global.h
src/backend/cslam/info/: cslam.vcg
src/backend/cslam/loops/: LoopDetector.cpp  LoopDetector.h
src/backend/cslam/matching/: BruteForceMatcher.cpp  BruteForceMatcher.h
src/backend/cslam/registration/: Makefile  Registrator3P.cpp  Registrator3P.h  Registrator5P.cpp  RegistratorKFs.cpp  RegistratorKFs.h  cmake_install.cmake
src/backend/cslam/slam/: CMakeLists.txt  Keyframe.h.bak  Makefile  PGOptimizer.cpp  PGOptimizer.h  SLAMSystem.cpp  SLAMSystem.h
src/backend/cslam/tools/: Makefile  cmake_install.cmake
src/backend/g2o_types/: CMakeLists.txt~  Makefile  anchored_points.cpp  cmake_install.cmake
src/backend/info/: calib_kinect.yaml  calib_xtion.yaml  cslam.rviz.vcg  rviz-groovy.rviz
src/backend/loops/: CMakeLists.txt  LoopDetector.cpp  LoopDetector.h  Makefile  TemplatedLoopDetector.h  cmake_install.cmake  creatvoc.cpp
src/backend/matching/: BruteForceMatcher.cpp  BruteForceMatcher.h  CMakeLists.txt  Makefile  cmake_install.cmake
src/backend/registration/: CMakeLists.txt  Makefile  Registrator.h  Registrator3P.cpp  Registrator3P.h  Registrator5P.cpp  Registrator5P.h  RegistratorBAPTAM.cpp  RegistratorBAPTAM.h  RegistratorKFs.cpp  RegistratorKFs.h  RegistratorSIM3.cpp  RegistratorSIM3.h  cmake_install.cmake
src/backend/slam/: CMakeLists.txt  Keyframe.cpp  Keyframe.h  Makefile  PGOptimizer.cpp  PGOptimizer.h  PlaneEdge.cpp  PlaneEdge.h  SLAMSystem.cpp  SLAMSystem.h  cmake_install.cmake
src/backend/tools/: CMakeLists.txt  Makefile  Profiler.h  Time.h  cmake_install.cmake
src/backend/tools/serialize/: SerializeSophus.h
src/conversions/: conversions.cpp  conversions.h
src/cs_ptam_msgs/: CMakeLists.txt  Makefile  cmake_install.cmake  cs_ptam_msgs.cbp
src/cs_ptam_msgs/catkin_generated/: cs_ptam_msgs-msg-extras.cmake.develspace.in  cs_ptam_msgs-msg-extras.cmake.installspace.in  cs_ptam_msgs-msg-paths-context.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/cs_ptam_msgs/catkin_generated/installspace/: cs_ptam_msgs-msg-paths-context.py  cs_ptam_msgs-msg-paths.cmake  cs_ptam_msgs.pc  cs_ptam_msgsConfig.cmake
src/cs_ptam_msgs/cmake/: cs_ptam_msgs-genmsg-context.py  cs_ptam_msgs-genmsg.cmake
src/cs_ptam_msgs/msg/: Corner.msg  Edges.msg  Keyframe.msg
src/geometry/: CMakeLists.txt  Makefile  PointClouds.cpp  PointClouds.h  cmake_install.cmake
src/idSLAM/msg/: _Corner.py  _DepthImage.py  _Edge.py  _Edges.py  _Keyframe.py  _Level.py  _Mappoint.py  _MultiCameraImage.py  _RGBImage.py  _SharedImageSet.py  __init__.py
src/idSLAM/srv/: _LoadMap.py  _SaveMap.py  _SetMappingEnabled.py  __init__.py
src/old/: CalibrationNode.cpp  CalibrationNode.h
src/ptam/: ATANCamera.cc  ATANCamera.h  Bundle.cc  Bundle.h  CMakeLists.txt  CameraModel.cc  CameraModel.h  HomographyInit.cc  HomographyInit.h  KeyFrame.cc  KeyFrame.h  LevelHelpers.h  MEstimator.h  Makefile  Map.cc  Map.h  MapMaker.cc  MapMaker.h  MapPoint.cc  MapPoint.h  MiniPatch.cc  MiniPatch.h  PatchFinder.cc  PatchFinder.h  PolynomialCamera.cc  PolynomialCamera.h  Relocaliser.cc  Relocaliser.h  ShiTomasi.cc  ShiTomasi.h  SmallBlurryImage.cc  SmallBlurryImage.h  SmallMatrixOpts.h  Tracker.cc  Tracker.cc.autosave  Tracker.h  TrackerData.h  cmake_install.cmake
src/ptam/msg/: _MultiCameraImage.py  __init__.py
src/ptam/old/: CameraCalibrator.cc  CameraCalibratorMain.cc  GLWindow2.cc
src/ptam/srv/: _LoadMap.py  _SaveMap.py  _SetMappingEnabled.py
src/tools/: CMakeLists.txt  Makefile  RGBDLogger.cpp  RGBDtoPLY.cpp  cmake_install.cmake
(+29 files in other folders)
